# Shooter

./: CMakeLists.txt  README.md  common.h  main.cpp
Abstract/: BlockingQueue.h  PacketsFactory.cpp  PacketsFactory.h
Connection/: Connection.cpp  Connection.h  CrcModule.cpp  CrcModule.h  TcpConnection.cpp  TcpConnection.h  TcpHandler.cpp  TcpHandler.h  UdpConnection.cpp  UdpConnection.h  UdpHandler.cpp  UdpHandler.h
Connection/Packets/: EndOfGamePacket.cpp  EndOfGamePacket.h  GameStatePacket.cpp  GameStatePacket.h  InitPacket.cpp  InitPacket.h  Packet.h  StartingPacket.cpp  StartingPacket.h
Controller/: Controller.cpp  Controller.h
Game/: Game.cpp  Game.h  GameManager.cpp  GameManager.h
Model/: BulletModel.h  PlayerModel.h
View/GameWindow/: GameWindow.cpp  GameWindow.h
